# symbolic

./: CMakeLists.txt
cmake/: VALConfig.cmake.in  symbolicConfig.cmake.in
include/symbolic/: pddl.h
